<?php

namespace App\Models;

use Database\Factories\SchoolClassFactory;
use Illuminate\Database\Eloquent\Builder;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\BelongsToMany;
use Illuminate\Database\Eloquent\Relations\HasMany;

class SchoolClass extends Model
{
    /** @use HasFactory<SchoolClassFactory> */
    use HasFactory;

    protected $table = 'classes';

    /**
     * @var list<string>
     */
    protected $fillable = [
        'name',
        'code',
        'academic_year_id',
        'grade_id',
        'stream_id',
        'class_teacher_id',
    ];

    /**
     * Build a stable class code for uniqueness within an academic year.
     */
    public static function buildCode(Grade $grade, string $sectionName, ?Stream $stream = null): string
    {
        $section = strtoupper(trim($sectionName));

        if ($stream !== null) {
            return sprintf('%d-%s-%s', $grade->number, strtoupper($stream->code), $section);
        }

        return sprintf('%d-%s', $grade->number, $section);
    }

    /**
     * @return BelongsTo<AcademicYear, $this>
     */
    public function academicYear(): BelongsTo
    {
        return $this->belongsTo(AcademicYear::class);
    }

    /**
     * @return BelongsTo<Grade, $this>
     */
    public function grade(): BelongsTo
    {
        return $this->belongsTo(Grade::class);
    }

    /**
     * @return BelongsTo<Stream, $this>
     */
    public function stream(): BelongsTo
    {
        return $this->belongsTo(Stream::class);
    }

    /**
     * @return BelongsTo<Teacher, $this>
     */
    public function classTeacher(): BelongsTo
    {
        return $this->belongsTo(Teacher::class, 'class_teacher_id');
    }

    /**
     * @return HasMany<Student, $this>
     */
    public function students(): HasMany
    {
        return $this->hasMany(Student::class, 'current_class_id');
    }

    /**
     * @return HasMany<TeacherAssignment, $this>
     */
    public function teacherAssignments(): HasMany
    {
        return $this->hasMany(TeacherAssignment::class, 'school_class_id');
    }

    /**
     * @return BelongsToMany<Subject, $this>
     */
    public function subjects(): BelongsToMany
    {
        return $this->belongsToMany(Subject::class, 'class_subject', 'school_class_id')
            ->withTimestamps();
    }

    /**
     * @param  Builder<SchoolClass>  $query
     * @param  array<string, mixed>  $filters
     * @return Builder<SchoolClass>
     */
    public function scopeFilter(Builder $query, array $filters): Builder
    {
        return $query
            ->when($filters['academic_year_id'] ?? null, fn (Builder $q, int|string $id) => $q->where('academic_year_id', $id))
            ->when($filters['grade_id'] ?? null, fn (Builder $q, int|string $id) => $q->where('grade_id', $id))
            ->when($filters['stream_id'] ?? null, fn (Builder $q, int|string $id) => $q->where('stream_id', $id))
            ->when($filters['search'] ?? null, function (Builder $q, string $search): void {
                $q->where(function (Builder $inner) use ($search): void {
                    $inner->where('code', 'like', "%{$search}%")
                        ->orWhere('name', 'like', "%{$search}%");
                });
            });
    }
}
